Fixed issue with textarea visibility

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -96,6 +96,15 @@ input:focus {
     box-shadow: 0px 0px 0px 3px var(--accent) !important;
 }
 
+textarea {
+    color: #222!important;
+    border: none !important;
+}
+
+textarea:focus {
+    box-shadow: 0px 0px 0px 3px var(--accent) !important;
+}
+
 :is(h1, h2, h3, h4, h5, h6) {
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
